--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,18 @@
 .poke-container {
   background-color: rgb(180, 180, 255);
-  width: 60%;
   margin-left: auto;
   margin-right: auto;
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-columns: auto auto auto auto;
+  row-gap: 50px;
+  column-gap: 50px;
   padding: 0;
   
 }
 
 .poke-block {
   text-align: center;
-  padding: 1rem;
+  border: 1px solid black;
+  height: 9rem;
+  background-color: rgb(216, 216, 216);
 }
